--- a/src/index.css
+++ b/src/index.css
@@ -6,3 +6,247 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+input:focus, select:focus {
+  border-color: inherit;   -webkit-box-shadow: none;   box-shadow: none;
+
+}
+
+.header {
+  display: flex;
+  align-items: center;
+  padding: 0 20px;
+
+  .title {
+    font-weight: 600;
+    font-size: 20px;
+  }
+
+  .icon {
+    padding-right: 20px;
+    color: gray;
+  }
+
+  .searchInput {
+    border: none;
+    outline: none;
+    padding: 12px;
+  }
+
+  .searchArea {
+    display: flex;
+    border-radius: 5px;
+    align-items: center;
+    background-color: white;
+  }
+
+  .searchInput:hover{
+    outline: none;
+  }
+
+  .search {
+    margin-left: auto;
+    justify-content: center;
+    align-content: center;
+    display: flex;
+  }
+
+  .searchButton {
+    padding: 12px 30px;
+    color: white;
+    border-radius: 6px;
+    border: none;
+    background-color: #614d86;
+    margin-left: 10px;
+  }
+}
+
+.upperSide{
+  display: flex;
+  flex-direction: row;
+  
+  .rightPanel {
+    margin-right: auto;
+    font-weight: 600;
+    font-size: 20px;
+    padding-left: 20px;
+  }
+
+  .leftPanel {
+    margin-left: auto;
+    padding-right: 20px;
+  }
+
+  .icon {
+    font-size: 22px;
+    margin-left: 10px;
+    cursor: pointer;
+  }
+}
+
+.table {
+  width: 98%;
+  align-self: center;
+  margin-left: auto;
+  margin-right: auto;
+  border-collapse: collapse;
+
+  .row{
+    border-bottom: 2px rgba(69, 69, 69, 0.185) solid;
+    height: 50px;
+  }
+
+  .icon {
+    font-size: medium;
+    margin-left: 10px;
+    cursor: pointer;
+  }
+
+  .row:last-child{
+    border: none;
+  }
+
+  .tableCheckbox {
+    width: 50px;
+    display: flex;
+  }
+
+  .checkbox{
+    margin-top: 15px;
+    margin-left: 15px;
+    appearance: none;
+    background-color: #fafafa;
+    border: 1px solid #555555;
+    box-shadow: 0 1px 2px rgba(0,0,0,0.05), inset 0px -15px 10px -12px rgba(0,0,0,0.05);
+    padding: 8px;
+    border-radius: 3px;
+    display: inline-block;
+    position: relative;
+  }
+
+  .checkbox:active, .checkbox:checked:active {
+    box-shadow: 0 1px 2px rgba(0,0,0,0.05), inset 0px 1px 3px rgba(0,0,0,0.1);
+  }
+  
+  .checkbox:checked {
+    background-color: #614d86;
+    border: 1px solid #adb8c0;
+    box-shadow: 0 1px 2px rgba(0,0,0,0.05), inset 0px -15px 10px -12px rgba(0,0,0,0.05), inset 15px 10px -12px rgba(255,255,255,0.1);
+    color: #99a1a7;
+  }
+
+  .checkbox:checked:after {
+    content: 'x';
+    font-size: 14px;
+    position: absolute;
+    top: -2px;
+    left: 4.5px;
+    color: white;
+  }
+  
+  .tableSection {
+    font-weight: 400;
+    width: 30%;
+  }
+
+  .options {
+    text-align: right;
+    font-size: large;
+  }
+}
+
+.cardContainer{
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+
+  .card{
+
+    width: 140px;
+    height: 150px;
+    background-color: rgb(206, 205, 205);
+    margin: 50px;
+    border-radius: 6px;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    justify-content: end;
+    
+    .cardName {
+      padding: 6px;
+    }
+  }
+
+  .cardContent {
+    background-color: rgb(233, 231, 231);
+    border-radius: 6px;
+    height: 100%;
+    width: 100%;
+    text-align: center;
+  }
+}
+
+/* The switch - the box around the slider */
+.switch {
+  margin-left: auto;
+  margin-right: 160px;
+  position: relative;
+  display: inline-block;
+  width: 48px;
+  height: 24px;
+}
+
+/* Hide default HTML checkbox */
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+/* The slider */
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 16px;
+  width: 16px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+input:checked + .slider {
+  background-color: #2196F3;
+}
+
+input:focus + .slider {
+  box-shadow: 0 0 1px #2196F3;
+}
+
+input:checked + .slider:before {
+  -webkit-transform: translateX(26px);
+  -ms-transform: translateX(26px);
+  transform: translateX(26px);
+}
+
+/* Rounded sliders */
+.slider.round {
+  border-radius: 34px;
+}
+
+.slider.round:before {
+  border-radius: 50%;
+}
